--- a/src/styles.css
+++ b/src/styles.css
@@ -419,6 +419,14 @@ video {
   display: none;
 }
 
+:root {
+  --color-primary: 50 52 55;
+  --color-secondary: 226 183 20;
+  --color-bright: 255 255 255;
+  --color-dark: 00 00 00;
+  --color-error: 255 00 00;
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -517,18 +525,27 @@ video {
   top: 224px;
   margin-right: 1rem;
   font-size: 15px;
-  --tw-text-opacity: 1;
-  color: rgb(100 102 105 / var(--tw-text-opacity));
+  color: rgb(var(--color-bright) / 0.3);
 }
 
 .tool-btn:hover {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(var(--color-bright) / var(--tw-text-opacity));
 }
 
 .active-tool-btn {
   --tw-text-opacity: 1;
-  color: rgb(226 183 20 / var(--tw-text-opacity));
+  color: rgb(var(--color-secondary) / var(--tw-text-opacity));
+}
+
+.wrong {
+  --tw-text-opacity: 1 !important;
+  color: rgb(var(--color-error) / var(--tw-text-opacity)) !important;
+}
+
+.correct {
+  --tw-text-opacity: 1;
+  color: rgb(var(--color-bright) / var(--tw-text-opacity));
 }
 
 /* .active-character {
@@ -539,26 +556,28 @@ video {
   position: absolute;
   top: 0px;
   left: 0px;
-  height: 50px;
+  height: 34px;
   width: 2px;
 }
 
-@keyframes bounce {
-  0%, 100% {
-    transform: translateY(-25%);
-    animation-timing-function: cubic-bezier(0.8,0,1,1);
+@keyframes blink {
+  0% {
+    opacity: 1;
   }
 
   50% {
-    transform: none;
-    animation-timing-function: cubic-bezier(0,0,0.2,1);
+    opacity: 0.2;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
 
 .cursor {
-  animation: bounce 1s infinite;
+  animation: blink 0.5s ease-in-out infinite;
   --tw-bg-opacity: 1;
-  background-color: rgb(226 183 20 / var(--tw-bg-opacity));
+  background-color: rgb(var(--color-secondary) / var(--tw-bg-opacity));
 }
 
 .mr-2 {
@@ -569,20 +588,28 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.ml-\[1px\] {
-  margin-left: 1px;
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .mr-6 {
   margin-right: 1.5rem;
 }
 
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .mt-4 {
@@ -609,6 +636,10 @@ video {
   max-height: 300px;
 }
 
+.min-h-\[0px\] {
+  min-height: 0px;
+}
+
 .min-h-\[300px\] {
   min-height: 300px;
 }
@@ -623,6 +654,10 @@ video {
 
 .w-\[50px\] {
   width: 50px;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .grid-rows-\[auto_1fr_auto\] {
@@ -669,14 +704,43 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-\[4px\] {
+  border-radius: 4px;
+}
+
 .bg-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(50 52 55 / var(--tw-bg-opacity));
+  background-color: rgb(var(--color-primary) / var(--tw-bg-opacity));
 }
 
 .bg-zinc-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
+}
+
+.bg-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--color-dark) / var(--tw-bg-opacity));
+}
+
+.bg-dark\/50 {
+  background-color: rgb(var(--color-dark) / 0.5);
+}
+
+.bg-dark\/60 {
+  background-color: rgb(var(--color-dark) / 0.6);
+}
+
+.bg-dark\/70 {
+  background-color: rgb(var(--color-dark) / 0.7);
+}
+
+.fill-secondary {
+  fill: rgb(var(--color-secondary) / 1);
+}
+
+.fill-bright {
+  fill: rgb(var(--color-bright) / 1);
 }
 
 .p-8 {
@@ -685,6 +749,16 @@ video {
 
 .p-3 {
   padding: 0.75rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .text-center {
@@ -699,14 +773,13 @@ video {
   font-family: Roboto Mono, sans-serif;
 }
 
+.text-\[24px\] {
+  font-size: 24px;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .text-3xl {
@@ -714,12 +787,16 @@ video {
   line-height: 2.25rem;
 }
 
-.font-light {
-  font-weight: 300;
+.text-\[16px\] {
+  font-size: 16px;
 }
 
-.font-medium {
-  font-weight: 500;
+.font-normal {
+  font-weight: 400;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .text-\[\#646669\] {
@@ -732,14 +809,24 @@ video {
   color: rgb(127 29 29 / var(--tw-text-opacity));
 }
 
+.text-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(var(--color-secondary) / var(--tw-text-opacity));
+}
+
+.text-bright {
+  --tw-text-opacity: 1;
+  color: rgb(var(--color-bright) / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-secondary {
-  --tw-text-opacity: 1;
-  color: rgb(226 183 20 / var(--tw-text-opacity));
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .filter {
@@ -752,17 +839,47 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-500 {
-  transition-duration: 500ms;
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
+}
+
+.hover\:bg-bright:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--color-bright) / var(--tw-bg-opacity));
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.group:hover .group-hover\:fill-black {
+  fill: #000;
+}
+
+.group:hover .group-hover\:fill-dark {
+  fill: rgb(var(--color-dark) / 1);
 }
 
 @media (min-width: 768px) {
-  .md\:mr-4 {
-    margin-right: 1rem;
+  .md\:mr-3 {
+    margin-right: 0.75rem;
   }
 
-  .md\:w-3\/4 {
-    width: 75%;
+  .md\:w-4\/6 {
+    width: 66.666667%;
+  }
+
+  @media (min-width: 768px) {
+    .md\:md\:w-4\/6 {
+      width: 66.666667%;
+    }
   }
 
   .md\:flex-row {
