--- a/src/styles.css
+++ b/src/styles.css
@@ -548,10 +548,6 @@ video {
   color: rgb(var(--color-bright) / var(--tw-text-opacity));
 }
 
-/* .active-character {
-    @apply relative after:content-[''] after:border-b-2 after:border-secondary after:w-full after:absolute after:bottom-0 after:left-0 after:animate-pulse-faster after:rounded-lg;
-  } */
-
 .cursor {
   position: absolute;
   top: 0px;
@@ -580,20 +576,10 @@ video {
   background-color: rgb(var(--color-secondary) / var(--tw-bg-opacity));
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
-}
+/* Hide Scrollbar .hide-scrollbar { */
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mr-6 {
-  margin-right: 1.5rem;
+.relative {
+  position: relative;
 }
 
 .mr-3 {
@@ -616,6 +602,22 @@ video {
   margin-top: 1rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -630,6 +632,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.max-h-\[120px\] {
+  max-height: 120px;
 }
 
 .max-h-\[300px\] {
@@ -658,6 +664,12 @@ video {
 
 .w-6 {
   width: 1.5rem;
+}
+
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .grid-rows-\[auto_1fr_auto\] {
@@ -713,26 +725,8 @@ video {
   background-color: rgb(var(--color-primary) / var(--tw-bg-opacity));
 }
 
-.bg-zinc-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
-}
-
-.bg-dark {
-  --tw-bg-opacity: 1;
-  background-color: rgb(var(--color-dark) / var(--tw-bg-opacity));
-}
-
-.bg-dark\/50 {
-  background-color: rgb(var(--color-dark) / 0.5);
-}
-
 .bg-dark\/60 {
   background-color: rgb(var(--color-dark) / 0.6);
-}
-
-.bg-dark\/70 {
-  background-color: rgb(var(--color-dark) / 0.7);
 }
 
 .fill-secondary {
@@ -741,10 +735,6 @@ video {
 
 .fill-bright {
   fill: rgb(var(--color-bright) / 1);
-}
-
-.p-8 {
-  padding: 2rem;
 }
 
 .p-3 {
@@ -761,6 +751,14 @@ video {
   padding-right: 1.5rem;
 }
 
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -773,15 +771,6 @@ video {
   font-family: Roboto Mono, sans-serif;
 }
 
-.text-\[24px\] {
-  font-size: 24px;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -791,12 +780,36 @@ video {
   font-size: 16px;
 }
 
+.text-\[24px\] {
+  font-size: 24px;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .font-normal {
   font-weight: 400;
 }
 
 .font-light {
   font-weight: 300;
+}
+
+.text-bright {
+  --tw-text-opacity: 1;
+  color: rgb(var(--color-bright) / var(--tw-text-opacity));
+}
+
+.text-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(var(--color-secondary) / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-\[\#646669\] {
@@ -809,21 +822,6 @@ video {
   color: rgb(127 29 29 / var(--tw-text-opacity));
 }
 
-.text-secondary {
-  --tw-text-opacity: 1;
-  color: rgb(var(--color-secondary) / var(--tw-text-opacity));
-}
-
-.text-bright {
-  --tw-text-opacity: 1;
-  color: rgb(var(--color-bright) / var(--tw-text-opacity));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .blur {
   --tw-blur: blur(8px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -833,20 +831,29 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.transition-colors {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
 
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-200 {
   transition-duration: 200ms;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
 }
 
 .hover\:bg-bright:hover {
@@ -857,10 +864,6 @@ video {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.group:hover .group-hover\:fill-black {
-  fill: #000;
 }
 
 .group:hover .group-hover\:fill-dark {
